--- a/Gondor_chic/src/components/accueil/dayproduct.css
+++ b/Gondor_chic/src/components/accueil/dayproduct.css
@@ -8,7 +8,7 @@
   .product-day {
     margin-bottom: 10px;
     font-family: 'Times New Roman', Times, serif;
-    font-size: 24px;
+    font-size: 55px;
     text-align: center;
     color: #333;
     width: 100%;
@@ -25,6 +25,7 @@
     position: relative;
     z-index: 1;
     flex-basis: 50%;
+    left: -40%;
   }
   
   .product-image {
@@ -40,24 +41,31 @@
     color: white;
     padding: 20px;
     width: 60%;
-    right: -10%;
-    top: 20%;
+    right: -30%;
+    top: 1%;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    height: 92%;
+    text-align: left;
+    padding-left: 6rem;
+    padding-top: 3rem;
   }
   
   .product-details {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
+    text-align: left;
+    align-items: flex-start;
   }
   
   .new-product {
     font-weight: bold;
-    text-align: center;
+    text-align: left;
     border-radius: 5px;
     width: fit-content;
     padding: 2px 10px;
-    margin: 0 auto 10px;
+    align-items: flex-start;
+    justify-content: left;
   }
   
   .product-name {
@@ -80,16 +88,17 @@
   }
   
   .see-more {
-    color: black;
-    background-color: white;
+    color: white;
+    background-color: transparent;
     border: none;
     border-radius: 25px;
     padding: 10px 20px;
     font-weight: bold;
     cursor: pointer;
     transition: all 0.3s ease;
-    align-self: center;
+    align-self: flex-start;
     margin-top: 20px;
+    border: 2px solid white;
   }
   
   .see-more:hover {
