--- a/Gondor_chic/src/components/accueil/login.css
+++ b/Gondor_chic/src/components/accueil/login.css
@@ -100,3 +100,12 @@
 .no-account a:hover {
     text-decoration: underline;
 }
+@media (max-width: 450px) {
+    .form-group input {
+        width: 80vw;
+        height: 20px;
+    }
+    .login-form h1 {
+        font-size: 35px;
+      }
+  }
